--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "apexcharts": "^4.0.0",
         "boxicons": "^2.1.4",
         "simple-datatables": "^9.2.1"
     }
